# libY

./: .gitignore  README.md
Sources/Athena/: Athena.sln
Sources/Athena/AthenaBase/: AthenaBase.csproj  AthenaUtility.cs  ResponseCode.cs
Sources/Athena/AthenaBase/Actions/: AbstractAction.cs
Sources/Athena/AthenaBase/Configurations/: DefaultConfigurations.cs  SystemMenus.cs  SystemMenus.json
Sources/Athena/AthenaBase/DataModels/: MenuDM.cs  ModelBase.cs
Sources/Athena/AthenaBase/Modules/: IModuleInstance.cs  ModuleBase.cs
Sources/Athena/AthenaBase/Properties/: AssemblyInfo.cs
Sources/Athena/AthenaClient/: App.xaml  App.xaml.cs  AthenaClient.csproj  ConfigFiles.cs  MainWindow.xaml  MainWindow.xaml.cs  UserContext.cs
Sources/Athena/AthenaClient/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Sources/Athena/AthenaClient/Services/: DockService.cs
Sources/Athena/AthenaClient/ViewModels/: DockMenuViewModel.cs  MenuItemViewModel.cs
Sources/Athena/AthenaClient/Windows/: DockContentWindow.xaml  DockContentWindow.xaml.cs  DockMenuWindow.xaml  DockMenuWindow.xaml.cs
cmake/: .gitignore  CMakeCache.txt  CMakeLists.linux.txt  CMakeLists.mingw.txt  CMakeLists.msys.txt  CMakeLists.txt  CopyOfCMakeCache.txt  Makefile  Ydemo  cmake_install.cmake  main.c  test.c
depens/adb/: AdbWinApi.def  AdbWinApi.lib
msvc/: devtools.sln  libY.sln  toolkit.sln  tools.sln
msvc/CPlusToolkit/: CPlusToolkit.vcxproj  CPlusToolkit.vcxproj.filters
msvc/devtools/: devtools.vcxproj  devtools.vcxproj.filters
msvc/dx/: dx.vcxproj  main.c
msvc/fuckcpp/: fuckcpp.vcxproj  fuckcpp.vcxproj.filters
msvc/libY/: libY.vcxproj  libY.vcxproj.filters
msvc/libYpp/: libYpp.vcxproj  libYpp.vcxproj.filters
msvc/libtools/: libtools.vcxproj  libtools.vcxproj.filters
msvc/video/: video.vcxproj  video.vcxproj.filters
msvc/windows/: windows.vcxproj  windows.vcxproj.filters
sources/: audio.c  derivative.md  fourier.c  fourier.md  guid.c  image.c  radian.c  最小二乘法.md
sources/CPlusToolkit/: ModuleBase.h  ModuleFactory.cpp  ModuleFactory.h
sources/av/: acap.c  acap.h  av.h
sources/av/acap/: acap.c
sources/av/acap/drivers/: acap_driver.h  acap_dsound.c  acap_mci.c  acap_waveIn.c
sources/av/acap/streams/: acap_stream.h
sources/bt/: readme.md
sources/bt/rfcomm/: rfcomm.c  rfcomm.h  rfcomm_driver.h  rfcomm_win32.c
sources/derivative/: derivative.md
sources/event/: event_poll.c  event_poll.h  select_event_poll.c
sources/fourier/: fourier.md
sources/fuckcpp/: Process.cpp  Stream.h  StreamReader.cpp
sources/funkcpp/: Process.cpp  Process.h  StreamReader.h  String.h  fuck.cpp  fuckcpp.h
sources/libY/: Y.c  Y.h  Yavltree.c  Yavltree.h  Ybase.c  Ybase.h  Ybstree.c  Ybstree.h  Ybuffer_queue.c  Ybuffer_queue.h  Ybuilder.c  Ybuilder.h  Ychar.h  Ycircle_queue.h  Yconv.c  Yconv.h  Ydll.c  Ydll.h  Yerrno.h  Yevent.c  Yevent.h  Yfile.c  Yfile.h  Yfirstinclude.h  Ylist.c  Ylist.h  Ylock.c  Ylock.h  Ymap.c  Ymap.h  Ynet.c  Ynet.h  Ypool.c  Ypool.h  Yqueue.c  Yqueue.h  Yreader.c  Yreader.h  Ysem.h  Ystring.c  (+28 more)
sources/libY/Ylog/: Yappender.h  Yappender_conosle.c  Yappender_file.c  Ylog.c  Ylog.h  Ylog.json  Ylogbase.h
sources/libY/Ymodular/: Yfactory.c  Yfactory.h  Ymodule.h  demo_module.c  modules.json
sources/libY/win32/: dirent.c  dirent.h
sources/libYinc/: Y.h  Ybase.h  Ydll.h  Yerrno.h  Yevent.h  Yfactory.h  Yfile.h  Yfirstinclude.h  Ylist.h  Ylock.h  Ylog.h  Ymap.h  Ynet.h  Ypool.h  Yqueue.h  Ysem.h  Ystring.h  Ytcp.h  Ytcpcli.h  Ythread.h  Ytree.h  libY.h
sources/libYpp/: Process.h  fuck.cpp  libYpp.h  main.cpp
sources/libYpp/Modular/: ModuleBase.cpp  ModuleBase.h  ModuleFactory.cpp  ModuleFactory.h
sources/libsocket/: event_poll_types.h  events.h
sources/libtools/: CMakeLists.txt  buffer_queue.c  buffer_queue.h  linked_list.c  linked_list.h  main.c  tool_file.h  tool_net.c  tool_net.h  tool_string.c  tool_string.h  tool_tcpcli.c  tool_tcpcli.h  tool_tcpsvc.c  tool_tcpsvc.h  tool_tree.c  tool_tree.h  toolbase.c  toolbase.h
sources/matrix/: matrix.c  matrix.h  matrix.md  transform.md
sources/sin_cos_tan/: sin.c  sin_cos_tan.md
sources/tools/: VODController.h  VODState.c  VODState.h
sources/video/: AVFormats.h  PixelFormats.h  Video.h  VideoCodecs.h  VideoDecode.c  VideoDecode.h  VideoRenderer.c  VideoRenderer.h  VideoUtils.c  main.c  vdec.h  video.h  vod.h
sources/video/VideoDecode/: VideoDecodeFFmpeg.c
sources/video/VideoRender/: VideoRendererD3D9.c
sources/video/VideoRenderers/: VideoRendererD3D9.c
sources/video/vdec/: vdec_ffmpeg.c
sources/video/vod/: vod_d3d9.c
sources/windows/: Desktop.h  adb.c
